flapivor/tests/m1/hopix/parser/good/106-assignment-3.hopix
val main =
  f (0) := 3