flapivor/tests/m1/hopix/parser/bad/69-local-definition-2.hopix
val main =
  val me = 0
  val you = 0;
  play (me);
  play (you);
  you